Fixed some css spacing

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -63,7 +63,8 @@ body {
     text-decoration: none;
 	left: 0;
 	top: 0;	
-	height: clamp(75px, 25%, 150px);
+	line-height: clamp(300%, 600%, 900%);
+	/* height: clamp(75px, 25%, 150px); */
 	width: 100%;
 	
 }
